<resources>
    <string name="app_name">Quizeo</string>

    <string name="logo">logo of the app</string>
    <string name="start">Start</string>
    <string name="make">Make a Quiz</string>
    <string name="options">Options</string>
    <string name="exit">exit icon</string>
    <string name="globe">background globe</string>
    <string name="back">Back</string>
    <string name="your_quizzes">Your Quizzes</string>
    <string name="new_quiz">New</string>
    <string name="save_quit">Save and Quit</string>
    <string name="submit_quiz">Submit Quiz</string>
    <string name="start_quiz">Start</string>
    <string name="play_quiz">Play a Quiz</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="select_Name">Confirm quiz name</string>
    <string name="title_your_quiz">Title of your quiz</string>
    <string name="your_username">Your username</string>
    <string name="your_quiz_info">Quiz Information</string>
    <string name="number_of_questions">Number of questions:</string>
    <string name="add_question">Add Question</string>
    <string name="location">Location:</string>
    <string name="add_location">Add Location</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_image_here">Upload Image Here</string>
    <string name="done">Done</string>
    <string name="add_a_question">Add a Question…</string>
    <string name="upload">Upload</string>
    <string name="save_options">Save Options</string>
    <string name="cancel">Cancel</string>
    <string name="mute_sounds">Mute Sounds</string>
    <string name="play_sounds">Play Sounds</string>
    <string name="only_verified">Only play verified quizzes</string>
    <string name="friend_requests">Allow friend requests</string>
    <string name="box">Clickable box</string>
    <string name="check_mark">Check mark</string>
    <string name="sound_icon">Sound icon</string>
    <string name="mute_icon">Mute icon</string>
    <string name="already_answered">"This question is already answered!"</string>
    <string name="add_an_answer">Add an Answer…</string>
    <string name="delete_question">Delete Question</string>
    <string name="add_option">Add Option</string>
    <string name="add_explanation">Add Explanation</string>
    <string name="remove_option">Remove Option</string>
    <string name="not_answered">"Answer the question first!"</string>
    <string name="quit">Quit</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="play_new_quiz">Play new quiz</string>
    <string name="rate_this_quiz">Rate this quiz:</string>
    <string name="next_question">Next Question</string>
    <string name="your_quiz_name">QuizName</string>
    <string name="your_quiz_name_1">QuizName1</string>
    <string name="eleven_questions">11 questions</string>
    <string name="seven_questions">7 questions</string>
    <string name="submitted">Submitted</string>
    <string name="unfinished">Unfinished</string>
    <string name="verified">Verified</string>
    <string name="under_review">Under review</string>
    <string name="no_correct">Please select the correct answer first!</string>
    <string name="no_answer">Please enter all answers first!</string>
    <string name="no_question">Please enter the question first!</string>
    <string name="little_questions">Please add at least 5 questions first!</string>
    <string name="no_quizname">Please add a Quizname first!</string>
    <string name="no_location">Please add a Location first!</string>
    <string name="save_username">Save Username</string>
    <string name="select_username">Choose your username!</string>
    <string name="remove_quiz">Remove quiz</string>
    <string name="not_enough_answers_added">Not enough answers added. Make sure to have at least two added answers!</string>
    <string name="location_no_found">The location has not been retrieved correctly! Please try again!</string>
    <string name="no_location_detected_make_sure_that_the_device_has_opened_google_maps_before">No location detected! Make sure that the device has opened google maps before!</string>
    <string name="enter_explanation">Pick your explanation!</string>
    <string name="save_explanation">Save explanation</string>
    <string name="remove_explanation">Remove explanation</string>
</resources>