<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/globeHome"
        android:layout_width="528dp"
        android:layout_height="528dp"
        android:contentDescription="@string/globe"
        android:alpha="0.7"
        android:src="@drawable/globe2_removebg_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/QuizeoLogo"
        android:layout_width="356dp"
        android:layout_height="273dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:layout_marginTop="85dp"
        android:text="@string/start"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/makeQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/QuizeoLogo" />

    <Button
        android:id="@+id/makeQuizButton"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:layout_marginTop="31dp"
        android:text="@string/make"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/optionsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="100dp"
        android:onClick="openOptions"
        android:text="@string/options"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makeQuizButton" />

    <ImageView
        android:id="@+id/exitIconHome"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/exit"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:alpha="0.5"
        android:src="@drawable/exit"
        android:clickable="true"
        android:focusable="true"
        android:onClick="exitClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>