<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateQuizFragment2">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="528dp"
        android:layout_height="528dp"
        android:layout_marginBottom="100dp"
        android:alpha="0.7"
        android:contentDescription="@string/globe"
        android:src="@drawable/globe2_removebg_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveQuit"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginStart="20dp"
        android:text="@string/save_quit"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <Button
        android:id="@+id/buttonSubmitQuiz"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginEnd="20dp"
        android:text="@string/submit_quiz"
        android:textColor="#F4EFEF"
        android:textColorHighlight="#F8EEEE"
        android:textColorLink="#F1EFEF"
        app:backgroundTint="#ED0909"
        app:iconTint="#F4EFEF"
        app:layout_constraintBottom_toBottomOf="@id/toolbar2"
        app:layout_constraintEnd_toEndOf="@id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <EditText
        android:id="@+id/YourQuizName"
        android:layout_width="314dp"
        android:layout_height="68dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/title_your_quiz"
        android:inputType="textShortMessage"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/YourUsername"
        android:layout_width="121dp"
        android:layout_height="41dp"
        android:layout_marginBottom="3dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/your_username"
        android:inputType="textShortMessage"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YourQuizName"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/YourQuizInfo"
        android:layout_width="361dp"
        android:layout_height="265dp"
        android:autofillHints=""
        android:background="@drawable/edittext_background_blue"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="textPersonName"
        android:text="@string/your_quiz_info"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@+id/buttonSubmitQuiz"
        app:layout_constraintStart_toStartOf="@+id/buttonSaveQuit"
        app:layout_constraintTop_toBottomOf="@+id/YourUsername"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/NumberOfQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/number_of_questions"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/YourQuizInfo"
        app:layout_constraintEnd_toEndOf="@+id/YourQuizInfo"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="@id/YourQuizInfo"
        app:layout_constraintTop_toTopOf="@+id/YourQuizInfo"
        app:layout_constraintVertical_bias="0.346"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/buttonAddQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_question"
        app:layout_constraintEnd_toEndOf="@+id/NumberOfQuestions"
        app:layout_constraintTop_toBottomOf="@+id/NumberOfQuestions" />

    <TextView
        android:id="@+id/textLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/location"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/NumberOfQuestions"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddQuestion" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_location"
        app:layout_constraintEnd_toEndOf="@+id/buttonAddQuestion"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonAddQuestion"
        app:layout_constraintTop_toBottomOf="@+id/textLocation" />

</androidx.constraintlayout.widget.ConstraintLayout>