<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".PlayQuizActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="528dp"
        android:layout_height="528dp"
        android:layout_marginBottom="100dp"
        android:alpha="0.7"
        android:contentDescription="@string/globe"
        android:src="@drawable/globe2_removebg_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/startQuiz"
        android:gravity="center"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="306dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="454dp"
        android:text="@string/start_quiz"
        android:textAllCaps="false"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/buttonPlayQuiz"
        android:layout_width="240dp"
        android:layout_height="88dp"
        android:layout_marginTop="31dp"
        android:text="@string/play_quiz"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="237dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <!--<Button
        android:id="@+id/buttonBack"
        android:layout_width="150dp"
        android:layout_height="88dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/toolbar2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />-->

</androidx.constraintlayout.widget.ConstraintLayout>