<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".AddQuestionActivity">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="528dp"
            android:layout_height="528dp"
            android:layout_marginBottom="100dp"
            android:alpha="0.7"
            android:contentDescription="@string/globe"
            android:src="@drawable/globe2_removebg_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#3F51B5"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/textQuestion"
            android:layout_width="371dp"
            android:layout_height="139dp"
            android:autofillHints=""
            android:background="@drawable/edittext_background_blue"
            android:gravity="center_horizontal"
            android:hint="@string/add_a_question"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.069" />


        <Button
            android:id="@+id/buttonAddOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="67dp"
            android:text="@string/add_option"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/buttonDeleteQuestion"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonDeleteQuestion"
            app:layout_constraintTop_toBottomOf="@id/textQuestion"
            app:layout_constraintVertical_bias="0.729" />

        <Button
            android:id="@+id/buttonSaveQuit"
            android:layout_width="150dp"
            android:layout_height="88dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="100dp"
            android:text="@string/save_quit"
            app:layout_constraintBottom_toTopOf="@+id/toolbar2"
            app:layout_constraintEnd_toStartOf="@+id/toolbar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ScrollView
            android:id="@+id/answers_scroll"
            android:layout_width="359dp"
            android:layout_height="335dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textQuestion"
            app:layout_constraintVertical_bias="0.082">

        </ScrollView>

        <Button
            android:id="@+id/buttonDeleteQuestion"
            android:layout_width="150dp"
            android:layout_height="88dp"
            android:layout_marginStart="630dp"
            android:layout_marginTop="100dp"
            android:text="@string/delete_question"
            android:textColor="#F4EFEF"
            android:textColorHighlight="#F8EEEE"
            android:textColorLink="#F1EFEF"
            app:backgroundTint="#ED0909"
            app:iconTint="#F4EFEF"
            app:layout_constraintBottom_toTopOf="@+id/toolbar2"
            app:layout_constraintEnd_toStartOf="@+id/toolbar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>

